[package]
name = "mdbook-flash"
version = "0.1.0"
edition = "2021"

authors = ["ImAKappa"]
categories = ["command-line-utilities"]
description = "An mdbook preprocessor for including flashcards and blank-fills into your documents"
keywords = ["mdbook", "markdown"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ImAKappa/mdbook-flash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1"
mdbook = "0.4"
pulldown-cmark = "0.9"
pulldown-cmark-to-cmark = "10.0"
serde_json = "1.0"
semver = "1.0"
anyhow = "1.0"
regex = "1.7"